# fx-comp

./: .gitignore  README.md  meson.build  testing_config.jsonc
include/: constants.h  util.h
include/comp/: animation_mgr.h  cairo_buffer.h  lock.h  object.h  output.h  saved_object.h  seat.h  server.h  tiling_layout.h  tiling_node.h  toplevel.h  transaction.h  view.h  widget.h  workspace.h  xwayland_mgr.h
include/comp/border/: edge.h  resize_edge.h  titlebar.h
include/config/: config.h
include/desktop/: layer_shell.h  toplevel.h  xdg.h  xdg_decoration.h  xwayland.h
include/desktop/effects/: shadow_data.h
include/desktop/widgets/: titlebar.h  workspace_indicator.h
include/seat/: cursor.h  input.h  keyboard.h  seat.h
protocols/: meson.build
src/: main.c  meson.build  util.c
src/comp/: animation_mgr.c  cairo_buffer.c  lock.c  meson.build  object.c  output.c  saved_object.c  seat.c  server.c  tiling_layout.c  tiling_node.c  toplevel.c  toplevel_impl.c  transaction.c  view.c  widget.c  workspace.c  xwayland_mgr.c
src/comp/border/: edge.c  resize_edge.c  titlebar.c
src/config/: config.c  meson.build
src/desktop/: layer_shell.c  meson.build  xdg.c  xdg_decoration.c  xdg_popup.c  xwayland.c  xwayland_toplevel.c  xwayland_unmanaged.c
src/desktop/effects/: meson.build  shadow_data.c
src/desktop/widgets/: meson.build  resize_edge.c  titlebar.c  workspace_indicator.c
src/seat/: cursor.c  input.c  keyboard.c  meson.build  seat.c
